--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "@mui/styles": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "nth-check": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "resolve-url-loader": "^5.0.0"
+    "react-router-dom": "^6.26.1",
+    "resolve-url-loader": "^5.0.0",
+    "tinycolor2": "^1.6.0"
   },
   "browserslist": {
     "production": [
@@ -52,6 +56,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.0",
+    "@types/tinycolor2": "^1.4.6",
     "html-webpack-plugin": "^5.6.0",
     "npm-force-resolutions": "0.0.10",
     "react-scripts": "^5.0.1",
