--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^11.0.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "node-fetch": "^3.3.2",
     "nth-check": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -56,6 +58,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.0",
+    "@types/node-fetch": "^2.6.12",
     "@types/tinycolor2": "^1.4.6",
     "html-webpack-plugin": "^5.6.0",
     "npm-force-resolutions": "0.0.10",
